# HyperNode

./: .bash_history  .env.example  .env.save  .gitconfig  .gitignore  .python_history  .wget-hsts  DEFAULT_PEERS.py  Dockerfile  Makefile  OCI-Hyper.py  README.md  SETUP.md  USAGE.md  adaptative_api.py  blockhain.go  build.py  buildFile.py  buildImage.py  buildPod.py  celaut.proto  celaut_pb2.py  check_ram.py  check_wbp_file.py  compile.proto  compile.py  compile_pb2.py  containers.json  data.json  dirs.json  docker_build_test.py  duplicate_grabber.py  execImage.py  execImageapi.py  gateway.proto  gateway.py  gateway_node.py  gateway_pb2.py  gateway_pb2_grpc.py  gateway_pb2_grpc_indices.py  (+45 more)
.devcontainer/: Dockerfile  devcontainer.json
__hycache__/: Dockerfile
bash/: accept_kya.sh  enable_ssh.sh  generate_protos.sh  init_arm.sh  init_dev_mode.sh  init_x86.sh  reconfig.sh  requirements.txt  reset_registry.sh  restore_src.sh  setup_arm.sh  setup_ubuntu_arm.sh  setup_ubuntu_x86.sh  setup_x86.sh  update_env.sh
commands/: __interface.py  check_net.py  containers.py  contracts.py  hy.py  interface.py  ledgers.py  peers.py
contracts/: envs.py  vyper_gas_deposit_contract.py
database/: migrate.py  query_interface.py  seed.py
docs/: ERGO.md  KyA.md  USAGE.md
docs_arch/: linkk
frontier/: Hyper.json  Hyperfile.json  Hyperfile2.json  HyperfileD.json
hy/: go.mod  go.sum  main.go
hyperfiles/: Hyperfile.json  (+7 more)
src/commands/tui/: .gitignore  Cargo.toml  README.md  build.rs
src/commands/tui/protos/: celaut.proto
src/commands/tui/src/: app.rs  handler.rs  main.rs  ui.rs
(+259 files in other folders)
