[package]
name = "tui"
version = "0.1.0"
authors = ["jse07 <jse07@anon.erg>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
sysinfo = "0.30.7"
vec_to_array = "0.2.3"
